--- a/login.html
+++ b/login.html
@@ -1,8 +1,9 @@
-	<!DOCTYPE HTML>
-<html>
+     <!DOCTYPE HTML>
+<html style= "font-family: monospace;">
 <title>Login Screen</title>
 <body bgcolor=#d94100>
 <form>
+<h1>Lorem Ipsum </h1>
 <p>Username:
 <input type=text> </input>
 </p>
@@ -13,4 +14,3 @@
 </form>
 </body>
 </html>
-
