--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 <input type=text id="pass"> </input>
 <button style= "color:blue;" id="loginBtn" onclick="loginHdlr()"> Login </button>
 </p>
-<script id=loginHdlr>
+<script>
 function loginHdlr() {
         document.getElementById("message").innerHTML = "Error: Everything is working as intended.";
 }
@@ -18,10 +18,10 @@ function loginHdlr() {
 </body>
 </html>
 
-<!-- 
- \___/
-_/. .\_
- \___/
-  | |
-hexgoblin
--->
+
+<!---\___/--->
+<!--_/. .\_-->
+<!---\___/--->
+<!----|-|---->
+<!--hexgoblin-->
+
