--- a/login.html
+++ b/login.html
@@ -1,18 +1,23 @@
-<html style= "font-family: monospace;">
-<title>Login Screen</title>
+  GNU nano 6.2                                                          login.html                                                                    
 <body bgcolor=#d94100>
 <h1>Lorem Ipsum </h1>
 <p>Username:
 <input type=text id="user"> </input>
 </p>
 <p>Password:
-<input type=text id="pass"> </input>
+<input type=text id="pass" oninput="disguise()"> </input>
 <button style= "color:blue;" id="loginBtn" onclick="loginHdlr()"> Login </button>
 </p>
 <script>
+var p = "";
 function loginHdlr() {
         document.getElementById("message").innerHTML = "Error: Everything is working as intended.";
 }
+function disguise() {
+        p=p+"*";
+        document.getElementById("pass").value = p;
+}
+
 </script>
 <p id="message" style= "color:DarkRed;background-color:white;"> </p>
 </body>
@@ -24,4 +29,3 @@ function loginHdlr() {
 <!---\___/--->
 <!----|-|---->
 <!--hexgoblin-->
-
