--- a/login.html
+++ b/login.html
@@ -8,16 +8,7 @@
 <input type=text id="pass" oninput="disguise()"> </input>
 <button style= "color:blue;" id="loginBtn" onclick="loginHdlr()"> Login </button>
 </p>
-<script>
-var p = "";
-function loginHdlr() {
-        document.getElementById("message").innerHTML = "Error: Everything is working as intended.";
-}
-function disguise() {
-        p=p+"*";
-        document.getElementById("pass").value = p;
-}
-
+<script src="login.js">
 </script>
 <p id="message" style= "color:DarkRed;background-color:white;"> </p>
 </body>
