--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
 <script src="login.js">
 </script>
 <p id="message" style= "color:DarkRed;background-color:white;"> </p>
-<p>Don't have an account? <a href="signup.html">Sign up</a> here.</p>
+<p>Don't have an account? <a href="signup.html" style="color:purple">Sign up</a> here.</p>
 </body>
 </html>
 
