As it turns out html can auto blot out your password

--- a/src/login.html
+++ b/src/login.html
@@ -7,7 +7,7 @@
 <input type=text id="user"> </input>
 </p>
 <p>Password:
-<input type=text id="pass" oninput="disguise()"> </input>
+<input type=password id="pass" oninput="disguise()"> </input>
 <button style= "color:blue;" id="loginBtn" onclick="loginHdlr()"> Login </button>
 </p>
 <script src="login.js">
