--- a/src/login.html
+++ b/src/login.html
@@ -3,13 +3,15 @@
 <title>Login Screen</title>
 <body bgcolor=#d94100>
 <h1>Lorem Ipsum </h1>
+<form method="post" action="thePage.html">
 <p>Username:
-<input type=text id="user"> </input>
+<input type=text id="user" name="user"> </input>
 </p>
 <p>Password:
-<input type=password id="pass" oninput="disguise()"> </input>
+<input type=password id="pass" name="pass"> </input>
 <button style= "color:blue;" id="loginBtn" onclick="loginHdlr()"> Login </button>
 </p>
+</form>
 <script src="login.js">
 </script>
 <p id="message" style= "color:DarkRed;background-color:white;"> </p>
