--- a/src/login.html
+++ b/src/login.html
@@ -5,10 +5,10 @@
 <h1>Lorem Ipsum </h1>
 <form method="post" action="thePage.html">
 <p>Username:
-<input type=text id="user" name="user"> </input>
+<input type=text id="user" name="userName"> </input>
 </p>
 <p>Password:
-<input type=password id="pass" name="pass"> </input>
+<input type=password id="pass" name="passWord"> </input>
 <button style= "color:blue;" id="loginBtn" onclick="loginHdlr()"> Login </button>
 </p>
 </form>
