Minor wording changes# Please enter the commit message for your changes. Lines starting

--- a/src/thePage.html
+++ b/src/thePage.html
@@ -2,7 +2,7 @@
 <html style= "font-family: monospace;">
 <title>The Page</title>
 <body bgcolor=#d94100>
-<h1>You've logged in, congrats. </h1>
+<h1>You've logged in.</h1>
 </body>
 </html>
 
