--- a/src/login.html
+++ b/src/login.html
@@ -2,7 +2,7 @@
 <html style= "font-family: monospace;">
 <title>Login Screen</title>
 <body bgcolor=#d94100>
-<h1>Lorem Ipsum </h1>
+<h1>Login:</h1>
 <form method="post" action="thePage.html">
 <p>Username:
 <input type=text id="user" name="userName"> </input>
@@ -15,13 +15,6 @@
 <script src="login.js">
 </script>
 <p id="message" style= "color:DarkRed;background-color:white;"> </p>
-<p>Don't have an account? <a href="signup.html" style="color:purple">Sign up</a> here.</p>
+<p>Don't have an account? <a href="signup.html" style="color:blue">Sign up</a> here.</p>
 </body>
 </html>
-
-
-<!---\___/--->
-<!--_/. .\_-->
-<!---\___/--->
-<!----|-|---->
-<!--hexgoblin-->
