Added the most important part, a silly favicon

--- a/src/login.html
+++ b/src/login.html
@@ -1,6 +1,9 @@
         <!DOCTYPE HTML>
 <html style= "font-family: monospace;">
+<head>
 <title>Login Screen</title>
+<link rel="icon" type="image/x-icon" href="../assets/favicon.png">
+</head>
 <body bgcolor=#d94100>
 <h1>Login:</h1>
 <form method="post" action="thePage.html">
